--- a/29-hooks/package.json
+++ b/29-hooks/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
